docs: Article content model creation is now part of the extension, thus updated the respective section

--- a/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
+++ b/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
@@ -58,26 +58,8 @@ After downloading the extension to your project, run the [Webiny watch](/docs/co
 yarn webiny watch admin --env ENVIRONMENT_NAME
 ```
 
-## Create Article Content Model
-
-If you're new to creating models in Webiny, refer to the [Create Content Model](/docs/user-guides/headless-cms/essentials/create-content-model) user guide.
-
-Alternatively, you can also import the `Article` content model; here is the  [import content model guide](/docs/user-guides/headless-cms/advanced/import-export-content-models#importing-content-models) and the [article.json file](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/article.json) for reference.
-
-We will create an `Article` content model with the following fields to manage and store articles:
-
-| Field             | Field Type | Field ID |
-| :----------       | :--------- | :--------- | 
-| Content           | Rich Text  | content |
-| SEO - Title       | Long text  | seoTitle |
-| SEO - Description | Long text  | seoDescription |
-| SEO - Meta Tags   | Object (with `Tag Name` and `Tag Value` Text Field)  | seoMetaTags |
-
-
-![Article](./assets/smart-seo-open-ai/article-model.png)
-
 ## All Set!
-You’re now ready to generate SEO titles and tags for your articles using OpenAI. Simply navigate to the Article Model, create a new article, and click the “AI-Optimized SEO” button to generate SEO titles and tags effortlessly.
+You’re now ready to generate SEO titles and tags for your articles using OpenAI. Simply navigate to the `Article - Smart SEO` Model, create a new article, and click the “AI-Optimized SEO” button to generate SEO titles and tags effortlessly.
 
 <Video src={smartSEO} controls={true} />
 
@@ -86,7 +68,7 @@ You’re now ready to generate SEO titles and tags for your articles using OpenA
 Let’s walk through the code to understand how the Smart SEO extension operates. We’ve created a new [extension](/docs/core-development-concepts/basics/extensions) called `smart-seo-open-ai`, and we’ll review each plugin used in this extension one by one.
 
 ### Field Tracker, ContentEntry Form Decorator
-In this example, we have an `Article` Model with four fields: `Content`, `SEO - Title`, `SEO - Description`, and `SEO - Meta Tags`. We will track these fields. Once the Content field is populated, we will send it to OpenAI, which will generate SEO-friendly titles and tags for the article. The generated title and tags will then be set in the respective `Title`, `Description` and `Tags` fields of the model.
+In this example, we have an `Article - Smart SEO` Model with four fields: `Content`, `SEO - Title`, `SEO - Description`, and `SEO - Meta Tags`. We will track these fields. Once the Content field is populated, we will send it to OpenAI, which will generate SEO-friendly titles and tags for the article. The generated title and tags will then be set in the respective `Title`, `Description` and `Tags` fields of the model.
 
 The concept is straightforward: we aim to track fields of interest, such as text inputs or rich text fields. The challenge lies in not knowing the exact location of these fields. They could be nested within objects, repeatable objects, or dynamic zone templates, making their placement unpredictable. Hardcoding paths to these fields is not a feasible solution. So, we will create the [Field Tracker](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/FieldTracker.tsx).
 
@@ -94,7 +76,7 @@ The concept is straightforward: we aim to track fields of interest, such as text
 
 Here is the [code for the Field Tracker](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/FieldTracker.tsx), here we [decorated the ContentEntryForm](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/DecorateContentEntryForm.tsx) with a FieldTracker component.
 
-We’ve also [decorated the useBind hook](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/DecorateContentEntryFormBind.tsx) to integrate field tracking specifically for models. In this example, we are tracking rich-text fields and SEO-specific fields (`seoTitle`, `seoDescription`, `seoMetaTags`) in the `Article` model. This allows us to trigger dynamic updates and facilitate interactions with external services.
+We’ve also [decorated the useBind hook](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/DecorateContentEntryFormBind.tsx) to integrate field tracking specifically for models. In this example, we are tracking rich-text fields and SEO-specific fields (`seoTitle`, `seoDescription`, `seoMetaTags`) in the `Article - Smart SEO` model. This allows us to trigger dynamic updates and facilitate interactions with external services.
 
 <Alert type="info">
 
@@ -118,3 +100,26 @@ If you’ve noticed the AI-Optimized SEO button on the Content Entry form, it ha
 </Alert>
 
 ![AI-optimized SEO Button](./assets/smart-seo-open-ai/ai-optimize-button.png)
+
+### Article Content Model
+
+In this example, we created an `Article - Smart SEO` Content Model with the ID `article-smart-seo` to showcase AI capabilities.This content model is generated programmatically, and you can find the corresponding [Content Model code here](https://github.com/webiny/webiny-examples/blob/master/headless-cms/test-plugins-ai/5.41.x/extensions/testPluginsAi/api/src/Article.ts).
+
+<Alert type="info">
+
+  Please note that the `article-smart-seo` content ID is referenced in the code. Refer to the sections above for guidance on customizing the code to align with your content model.
+
+  In your real project, you can remove this content model by either [deleting the corresponding api directory](https://github.com/webiny/webiny-examples/tree/master/headless-cms/test-plugins-ai/5.41.x/extensions/testPluginsAi/api) or commenting out the [Article import in the index file](https://github.com/webiny/webiny-examples/blob/501128af39b463fd1645ac08e939ceed00f18a17/headless-cms/test-plugins-ai/5.41.x/extensions/testPluginsAi/api/src/index.ts#L4).
+
+</Alert>
+
+For your reference, we created an `Article - Smart SEO` content model with the following fields to manage and store articles:
+
+| Field             | Field Type | Field ID |
+| :----------       | :--------- | :--------- |
+| Content           | Rich Text  | content |
+| SEO - Title       | Long text  | seoTitle |
+| SEO - Description | Long text  | seoDescription |
+| SEO - Meta Tags   | Object (with `Tag Name` and `Tag Value` Text Field)  | seoMetaTags |
+
+![Article](./assets/smart-seo-open-ai/article-model.png)
