--- a/docs/developer-docs/5.41.x/page-builder/extending/create-a-page-element.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/create-a-page-element.mdx
@@ -12,16 +12,16 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What you'll learn">
 
-  - how to create a custom page Builder element
-  - how to register plugins in Webiny applications
+- how to create a custom page Builder element
+- how to register plugins in Webiny applications
 
 </Alert>
 
 <Alert type="info">
 
-  The full code example used in this article is available in our
-  [webiny-examples](https://github.com/webiny/webiny-examples/tree/master/page-builder/spacex-page-element) GitHub
-  repository.
+The full code example used in this article is available in our
+[webiny-examples](https://github.com/webiny/webiny-examples/tree/master/page-builder/spacex-page-element) GitHub
+repository.
 
 </Alert>
 
@@ -47,18 +47,16 @@ Also, upon dropping the element onto a page, users will have the ability to adju
 2. number of spacecrafts to be displayed
 3. pagination offset (number of spacecrafts we want to skip when retrieving the data)
 
-<Image
-  title="SpaceX Page Element in the Elements Menu (Media category)"
-  src={elementSettings}
-  style={{ width: 450 }}
-/>
+<Image title="Page Element Settings" src={elementSettings} style={{ width: 450 }} />
 
 Note that the spacecrafts data will be retrieved from a non-official public SpaceX GraphQL HTTP API, located at https://spacex-production.up.railway.app/. Meaning, changing these settings will dictate the variables that will be included in GraphQL queries issued by the page element. More on this in the following sections.
 
 <ExtensionsGettingStarted
   type={"pbElement"}
   name={"spaceXElement"}
-  fullExampleLink={"https://github.com/webiny/webiny-examples/tree/master/page-builder/custom-page-elements"}
+  fullExampleLink={
+    "https://github.com/webiny/webiny-examples/tree/master/page-builder/custom-page-elements"
+  }
   fullExampleDownloadLink={"page-builder/custom-page-elements"}
   dependencies={["graphql-request@^6.0.0", "@webiny/ui", "@webiny/form", "@webiny/validation"]}
 />
@@ -75,7 +73,6 @@ Via a couple of React components, the next step is registering the renderer Reac
 
 For this, we'll be utilizing the [`admin.tsx`](https://github.com/webiny/webiny-examples/blob/master/page-builder/custom-page-elements/extensions/spaceXElement/src/admin.tsx) and [`website.tsx`](https://github.com/webiny/webiny-examples/blob/master/page-builder/custom-page-elements/extensions/spaceXElement/src/website.tsx) entry points, that the Page Builder element extension has created for us. Within these files, we'll be registering the renderer React component via the `PbEditorPageElementPlugin` and `PbRenderElementPlugin` React components.
 
-
 ![Page Preview In the Admin App](./assets/create-a-page-element/admin-page-preview.png)
 
 ## Implementation
@@ -87,99 +84,95 @@ As previously mentioned, in order to create a custom page element, we start off 
 ```tsx extensions/spaceXElement/src/SpaceX.tsx
 import React from "react";
 import { request } from "graphql-request";
-import { 
-    createRenderer, 
-    useRenderer, 
-    useLoader 
-} from "@webiny/app-page-builder-elements";
+import { createRenderer, useRenderer, useLoader } from "@webiny/app-page-builder-elements";
 
 // For simplicity, we're hard-coding the GraphQL HTTP API URL here.
 const GQL_API_URL = "https://spacex-production.up.railway.app/";
 
 // These are the necessary GraphQL queries we'll need in order to retrieve data.
 const QUERIES = {
-    rockets: /* GraphQL */ `
-        query listRockets($limit: Int, $offset: Int) {
-            data: rockets(limit: $limit, offset: $offset) {
-                id
-                name
-                description
-                wikipedia
-            }
-        }
-    `,
-    dragons: /* GraphQL */ `
-        query listDragons($limit: Int, $offset: Int) {
-            data: dragons(limit: $limit, offset: $offset) {
-                id
-                name
-                description
-                wikipedia
-            }
-        }
-    `
+  rockets: /* GraphQL */ `
+    query listRockets($limit: Int, $offset: Int) {
+      data: rockets(limit: $limit, offset: $offset) {
+        id
+        name
+        description
+        wikipedia
+      }
+    }
+  `,
+  dragons: /* GraphQL */ `
+    query listDragons($limit: Int, $offset: Int) {
+      data: dragons(limit: $limit, offset: $offset) {
+        id
+        name
+        description
+        wikipedia
+      }
+    }
+  `
 };
 
 export interface Spacecraft {
-    id: string;
-    name: string;
-    description: string;
-    wikipedia: string;
+  id: string;
+  name: string;
+  description: string;
+  wikipedia: string;
 }
 
 // It's often useful to type the data that the page element will carry.
 export interface SpaceXElementData {
-    variables: {
-        limit: string;
-        offset: string;
-        type: "rockets" | "dragons";
-    };
+  variables: {
+    limit: string;
+    offset: string;
+    type: "rockets" | "dragons";
+  };
 }
 
 // The renderer React component.
 export const SpaceX = createRenderer(() => {
-    // Let's retrieve the variables that were chosen by
-    // the user upon dropping the page element onto the page.
-    const { getElement } = useRenderer();
-    const element = getElement<SpaceXElementData>();
-    const { limit, offset, type } = element.data.variables;
+  // Let's retrieve the variables that were chosen by
+  // the user upon dropping the page element onto the page.
+  const { getElement } = useRenderer();
+  const element = getElement<SpaceXElementData>();
+  const { limit, offset, type } = element.data.variables;
 
-    // This is where we fetch the data.
-    // Note the `useLoader` React hook. With it, we're ensuring that the
-    // page element is rendered efficiently within a published page.
-    const { data, loading } = useLoader<Spacecraft[]>(() => {
-        return request(GQL_API_URL, QUERIES[type], {
-            limit: parseInt(limit),
-            offset: parseInt(offset)
-        }).then(res => res.data);
-    });
+  // This is where we fetch the data.
+  // Note the `useLoader` React hook. With it, we're ensuring that the
+  // page element is rendered efficiently within a published page.
+  const { data, loading } = useLoader<Spacecraft[]>(() => {
+    return request(GQL_API_URL, QUERIES[type], {
+      limit: parseInt(limit),
+      offset: parseInt(offset)
+    }).then(res => res.data);
+  });
 
-    if (loading) {
-        return <>Loading...</>;
-    }
+  if (loading) {
+    return <>Loading...</>;
+  }
 
-    if (!data?.length) {
-        return <>Nothing to show.</>;
-    }
+  if (!data?.length) {
+    return <>Nothing to show.</>;
+  }
 
-    // If the data has been retrieved, we render it via a simple unordered list.
-    return (
-        <ul>
-            {data.map(item => (
-                <li key={item.id}>
-                    <h1>{item.name}</h1>
-                    <div>{item.description}</div>
-                    <br />
-                    <div>
-                        More info at&nbsp;
-                        <a href={item.wikipedia} target={"_blank"} rel={"noreferrer"}>
-                            {item.wikipedia}
-                        </a>
-                    </div>
-                </li>
-            ))}
-        </ul>
-    );
+  // If the data has been retrieved, we render it via a simple unordered list.
+  return (
+    <ul>
+      {data.map(item => (
+        <li key={item.id}>
+          <h1>{item.name}</h1>
+          <div>{item.description}</div>
+          <br />
+          <div>
+            More info at&nbsp;
+            <a href={item.wikipedia} target={"_blank"} rel={"noreferrer"}>
+              {item.wikipedia}
+            </a>
+          </div>
+        </li>
+      ))}
+    </ul>
+  );
 });
 ```
 
@@ -189,22 +182,24 @@ So, with this code in place, we're ready for the next step, which is registering
 
 ### Admin App
 
-Registering our custom page element within the **Admin** app is done via the [`extensions/spaceXElement/src/admin.tsx`](https://github.com/webiny/webiny-examples/blob/master/page-builder/custom-page-elements/extensions/spaceXElement/src/admin.tsx) entry point file, via three React components. 
+Registering our custom page element within the **Admin** app is done via the [`extensions/spaceXElement/src/admin.tsx`](https://github.com/webiny/webiny-examples/blob/master/page-builder/custom-page-elements/extensions/spaceXElement/src/admin.tsx) entry point file, via three React components.
 
-The first one is the `PbEditorPageElementPlugin` component, which is used to register the renderer React component within the page editor. The second one is the `PbRenderElementPlugin` component, which is used to register the renderer React component within the **Admin** app, outside the page editor. This is important because pages can also be previewed within the **Admin** app.
+The first one is the `PbEditorPageElementPlugin` component, which is used to register the renderer React component within the page editor. The second one is the `PbRenderElementPlugin` component, which is used to register the renderer React component within the **Admin** app, outside the page editor. This is important because pages can also be previewed within the **Admin** app, for example:
 
 ![Page Preview In the Admin App](./assets/create-a-page-element/admin-page-preview.png)
 
 Finally, the `PbEditorPageElementAdvancedSettingsPlugin` React component is used to register the advanced settings React component within the page editor.
+
+<Image title="Page Element Settings" src={elementSettings} style={{ width: 450 }} />
 
 The following code snippet shows the contents of the [`extensions/spaceXElement/src/admin.tsx`](https://github.com/webiny/webiny-examples/blob/master/page-builder/custom-page-elements/extensions/spaceXElement/src/admin.tsx) file:
 
 ```tsx extensions/spaceXElement/src/admin.tsx
 import React from "react";
 import {
-    PbEditorPageElementAdvancedSettingsPlugin,
-    PbEditorPageElementPlugin,
-    PbRenderElementPlugin
+  PbEditorPageElementAdvancedSettingsPlugin,
+  PbEditorPageElementPlugin,
+  PbRenderElementPlugin
 } from "@webiny/app-page-builder";
 import { SpaceX, SpaceXElementData } from "./SpaceX";
 import { OnCreateActions } from "@webiny/app-page-builder/types";
@@ -212,70 +207,68 @@ import { Element } from "@webiny/app-page-builder-elements/types";
 import { AdvancedSettings } from "./admin/AdvancedSettings";
 
 const INITIAL_ELEMENT_DATA: SpaceXElementData = {
-    variables: { type: "rockets", limit: "10", offset: "0" }
+  variables: { type: "rockets", limit: "10", offset: "0" }
 };
 
 export const Extension = () => (
-    <>
-        <PbRenderElementPlugin elementType={"spaceX"} render={SpaceX} />
-        <PbEditorPageElementPlugin
-            elementType={"spaceX"}
-            render={({ element }) => <SpaceX element={element as Element} />}
-            toolbar={{
-                // We use `pb-editor-element-group-media` to put our new
-                // page element into the Media group in the left sidebar.
-                title: "SpaceX",
-                group: "pb-editor-element-group-media",
-                preview() {
-                    // We can return any JSX / React code here. To keep it
-                    // simple, we are simply returning the element's name.
-                    return <>Space X Page Element</>;
-                }
-            }}
-            // Defines which types of element settings are available to the user.
-            settings={[
-                "pb-editor-page-element-settings-delete",
-                "pb-editor-page-element-settings-visibility",
-                "pb-editor-page-element-style-settings-padding",
-                "pb-editor-page-element-style-settings-margin",
-                "pb-editor-page-element-style-settings-width",
-                "pb-editor-page-element-style-settings-height",
-                "pb-editor-page-element-style-settings-background"
-            ]}
-            // Defines onto which existing elements our element can be dropped.
-            // In most cases, using `["cell", "block"]` will suffice.
-            target={["cell", "block"]}
-            onCreate={OnCreateActions.OPEN_SETTINGS}
-            // `create` function creates the initial data for the page element.
-            create={options => {
-                return {
-                    type: "spaceX",
-                    elements: [],
-                    data: INITIAL_ELEMENT_DATA,
-                    ...options
-                };
-            }}
-        />
-        <PbEditorPageElementAdvancedSettingsPlugin
-            elementType={"spaceX"}
-            element={<AdvancedSettings />}
-        />
-    </>
-);
+  <>
+    <PbRenderElementPlugin elementType={"spaceX"} render={SpaceX} />
+    <PbEditorPageElementPlugin
+      elementType={"spaceX"}
+      render={({ element }) => <SpaceX element={element as Element} />}
+      toolbar={{
+        // We use `pb-editor-element-group-media` to put our new
+        // page element into the Media group in the left sidebar.
+        title: "SpaceX",
+        group: "pb-editor-element-group-media",
+        preview() {
+          // We can return any JSX / React code here. To keep it
+          // simple, we are simply returning the element's name.
+          return <>Space X Page Element</>;
+        }
+      }}
+      // Defines which types of element settings are available to the user.
+      settings={[
+        "pb-editor-page-element-settings-delete",
+        "pb-editor-page-element-settings-visibility",
+        "pb-editor-page-element-style-settings-padding",
+        "pb-editor-page-element-style-settings-margin",
+        "pb-editor-page-element-style-settings-width",
+        "pb-editor-page-element-style-settings-height",
+        "pb-editor-page-element-style-settings-background"
+      ]}
+      // Defines onto which existing elements our element can be dropped.
+      // In most cases, using `["cell", "block"]` will suffice.
+      target={["cell", "block"]}
+      onCreate={OnCreateActions.OPEN_SETTINGS}
+      // `create` function creates the initial data for the page element.
+      create={options => {
+        return {
+          type: "spaceX",
+          elements: [],
+          data: INITIAL_ELEMENT_DATA,
+          ...options
+        };
+      }}
+    />
+    <PbEditorPageElementAdvancedSettingsPlugin
+      elementType={"spaceX"}
 
+      // To make the code a bit cleaner, we've moved the page element
+      // settings into a separate `AdvancedSettings` React component.
+      element={<AdvancedSettings />}
+    />
+  </>
+);
 ```
 
+With this code in place, our custom page element should be available within the page editor, and also within the **Admin** app itself, where pages are previewed.
 
-When it comes to plugin registration, in total, there are three plugins we need to register within the **Admin** app. The two shown above, plus the previously created [`PbRenderElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.40.0/packages/app-page-builder/src/types.ts#L375-L380) plugin. The [`PbRenderElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.40.0/packages/app-page-builder/src/types.ts#L375-L380) is required because, as mentioned, pages can also be previewed within the **Admin** app, outside the page editor.
-
-![Page Preview In the Admin App](./assets/create-a-page-element/admin-page-preview.png)
-
-
-With all the plugins registered, we're now ready to give this a try locally in our browser.
+Before jumping into our browser to see the results though, let's also register the renderer React component within the **Website** app.
 
 ### Website App
 
-In order for our custom renderer React component to be used upon rendering a published page, we need to register it via the `PbRenderElementPlugin` plugin, via the [`website.tsx`](#) entry point file.
+In order for our custom renderer React component to be used in a page on our public website, we need to register it via the `PbRenderElementPlugin` plugin, via the [`website.tsx`](https://github.com/webiny/webiny-examples/blob/master/page-builder/custom-page-elements/extensions/spaceXElement/src/website.tsx) entry point file:
 
 ```tsx extensions/spaceXElement/src/website.tsx
 import React from "react";
@@ -283,22 +276,23 @@ import { PbRenderElementPlugin } from "@webiny/app-website";
 import { SpaceX } from "./SpaceX";
 
 export const Extension = () => <PbRenderElementPlugin elementType={"spaceX"} render={SpaceX} />;
-
 ```
+
+And that's all there is to it. With this code in place, we can now jump into our browser and see the results.
 
 ## Testing
 
-With the above steps correctly completed, we should be able to see our custom page element in Page Builder's page editor and be able to drop it onto a page. The page element should also be correctly rendered when previewing the page, and also on the public website, once the page has been published.
+With the above steps correctly completed, we should be able to see our custom page element in Page Builder's page editor and be able to drop it onto a page. 
 
 <Video src={elementInEditor} controls={true} />
 
+The page element should also be correctly rendered when previewing the page, and also on the public website, once the page has been published.
+
 ## Conclusion
 
-Creating custom page elements is certainly an interesting option when users need more than what the default set of page elements provides.
+In this article, we've created a simple page element that retrieves data from a public SpaceX GraphQL HTTP API. We've also seen how to register the renderer React component within the **Admin** and **Website** apps, so that the page element can be used within the page editor, and also on the public website.
 
-On the code level, this could be creating completely custom (renderer) React components, including needed external NPM libraries, or even issuing remote HTTP requests to external HTTP APIs in order to retrieve data from standalone external systems.
-
-On the other hand, custom page elements also add additional flexibility by allowing content creators to tweak elements' settings and, ultimately, allowing them to achieve more with just a single page element.
+Of course, this is just a starting point. We encourage you to experiment further and create more complex page elements that can be used to create rich and engaging pages for your website.
 
 ## Additional Examples
 
