fix: use "Extensions" as the name of the section

--- a/docs/developer-docs/5.39.x/headless-cms/overview.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/overview.mdx
@@ -46,7 +46,7 @@ Below you'll find a few core articles that we recommend every engineer to go thr
 
 <Section>
   <SectionTitle
-    title="Extending functionality"
+    title="extensions"
     subText="Learn how to customize and extend the capabilities of the Headless CMS app."
     categoryTitle="Extending"
   />
