--- a/docs/developer-docs/5.39.x/page-builder/overview.mdx
+++ b/docs/developer-docs/5.39.x/page-builder/overview.mdx
@@ -43,7 +43,7 @@ Below you'll find some key articles to get you started with customizing the page
 
 <Section>
   <SectionTitle
-    title="Extending functionality"
+    title="extensions"
     subText="Learn how to customize and extend the capabilities of the Page Builder app."
     categoryTitle="Extending"
   />
