--- a/docs/developer-docs/5.40.x/admin-area/extending/change-logo.mdx
+++ b/docs/developer-docs/5.40.x/admin-area/extending/change-logo.mdx
@@ -24,6 +24,8 @@ In order to follow this guide, you must use Webiny version **5.40.0** or greater
 
 In this article, we cover how to replace the default Webiny logo that is shown in the Admin app's header bar and the navigation drawer, with our own logo.
 
+## Getting Started
+
 <ExtensionsGettingStarted
   type={"admin"}
   name={"adminLogo"}
