--- a/docs/developer-docs/5.40.x/admin-area/extending/custom-dashboard.mdx
+++ b/docs/developer-docs/5.40.x/admin-area/extending/custom-dashboard.mdx
@@ -20,6 +20,8 @@ import customDashboard from "./assets/custom-dashboard.png";
 
 In this article, we show how we can replace the default dashboard in the Webiny Admin app. This is useful when we want to create a custom dashboard that better suits our needs.
 
+## Getting Started
+
 <ExtensionsGettingStarted
   type={"admin"}
   name={"adminDashboard"}
