--- a/docs/developer-docs/5.40.x/core-development-concepts/extending-and-customizing/extend-graphql-api.mdx
+++ b/docs/developer-docs/5.40.x/core-development-concepts/extending-and-customizing/extend-graphql-api.mdx
@@ -25,6 +25,8 @@ In this article, we explain how to extend Webiny's main GraphQL API. Note that W
 
 </Alert>
 
+## Getting Started
+
 <ExtensionsGettingStarted
   type={"api"}
   name={"extendGraphqlApi"}
