--- a/docs/developer-docs/5.40.x/file-manager/extending/customize-file-actions.mdx
+++ b/docs/developer-docs/5.40.x/file-manager/extending/customize-file-actions.mdx
@@ -30,6 +30,8 @@ On top of the built-in actions, it's also possible to add custom actions, which 
 
 In this guide, we show how to add custom actions for both scenarios.
 
+## Getting Started
+
 <ExtensionsGettingStarted type={"admin"} name={"customFileActions"} dependencies={"@webiny/app-file-manager,@material-design-icons/svg"} />
 
 ## Global File Actions
