--- a/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
+++ b/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
@@ -28,6 +28,8 @@ On the other hand, the video file on the right does not have any preview being d
 
 But, if required, this can be implemented, which is what we cover in this article.
 
+## Getting Started
+
 <ExtensionsGettingStarted type={"admin"} name={"customFilePreview"} dependencies={"@webiny/app-file-manager"} />
 
 ## File Preview For Specific File Type
