--- a/docs/developer-docs/5.40.x/headless-cms/extending/content-models-via-code.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/extending/content-models-via-code.mdx
@@ -37,6 +37,8 @@ Some of the benefits of this approach are:
 
 In the following sections, we cover a couple of examples that show how to define content models and content model groups via plugins.
 
+## Getting Started
+
 <ExtensionsGettingStarted
   type={"api"}
   name={"models"}
