--- a/docs/developer-docs/5.41.x/security/extensions/programmatically-create-roles-and-teams.mdx
+++ b/docs/developer-docs/5.41.x/security/extensions/programmatically-create-roles-and-teams.mdx
@@ -50,6 +50,8 @@ Some of the benefits of this approach are:
 
 In the following sections, we cover a couple of examples that show how to define roles and teams via plugins.
 
+## Getting Started
+
 <ExtensionsGettingStarted
   type={"api"}
   name={"rolesAndTeams"}
