fix: update PB elements articles

--- a/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/loading-data-in-page-elements.mdx
@@ -15,4 +15,11 @@ import { Alert } from "@/components/Alert";
 
 ## Introduction
 
-It's not uncommon to have a page element that needs to load data from an external source. For example, you might want to display a list of products, a list of blog posts, or a list of categories in a Page Builder element. In this guide, you'll learn how to efficiently load data in Page Builder elements using the `useLoader` React hook.
+It's not uncommon to have a page element that loads data from an external remote HTTP API and displays it on the page.  
+
+For example, you might want to display a list of products or a list of blog posts that are loaded from [Webiny's Headless CMS GraphQL API](/docs/headless-cms/basics/graphql-api). Another examples is listing rocket and dragon spacecrafts from an external SpaceX API, which is covered in the [Create a Custom Page Element](/docs/page-builder/extending/create-a-page-element) guide.
+
+
+In this guide, we'll show you how to efficiently load data in Page Builder elements using the `useLoader` React hook.
+
+
