--- a/docs/release-notes/5.41.4/changelog.mdx
+++ b/docs/release-notes/5.41.4/changelog.mdx
@@ -30,3 +30,28 @@ When using 3rd party IdPs, such as [Okta](/docs/enterprise/okta-integration) or 
 More specifically, resolving security roles from teams that were created via the Admin app was not working as expected. On the other hand, teams that were define programmatically were working as expected.
 
 This issue has been fixed, and now, when using the `getIdentity` callback, teams are correctly loaded and assigned to the identity object.
+
+## Page Builder
+
+### New "Page Builder Element" Extension ([#4342](https://github.com/webiny/webiny-js/pull/4342))
+
+We've introduced a new type of an extension called **Page Builder element** extension.
+
+Once run, the extension will make sure a users ends up with all of the required files and configurations for a new Page Builder element plugin. This will make it easier for users to start developing new Page Builder elements.
+
+The extension can be accessed like any other extension, via the [`webiny extension`](/docs/core-development-concepts/basics/webiny-cli#yarn-webiny-extension) command, by then selecting **Page Builder Element** from the list of all available extensions.
+
+### New Page Element Plugins ([#4340](https://github.com/webiny/webiny-js/pull/4340))
+
+In order to be more in line with the new [Page Builder element extension](/docs/release-notes/5.41.4/changelog#new-page-builder-element-extension-4342), and also some of the best practices we've been pushing lately, we've updated the existing Page Builder element plugins. Essentially, instead of using plain JavaScript objects, users will now do the same via React components.
+
+Note that the previous way of creating Page Builder element plugins will still work, but moving on, we recommend using the new way.
+
+<Alert type={"info"}>
+
+  Our existing [Create a Custom Page Element](/docs/page-builder/extending/create-a-page-element) article has been updated to reflect these changes.
+
+</Alert>
+
+### Introducing the `useLoader` React Hook ([#4424](https://github.com/webiny/webiny-js/pull/4424)) ([#4435](https://github.com/webiny/webiny-js/pull/4435))
+
